fix uneven header bottom border

--- a/jsapp/js/account/usage/usageProjectBreakdown.module.scss
+++ b/jsapp/js/account/usage/usageProjectBreakdown.module.scss
@@ -40,16 +40,13 @@ tr {
   font-weight: 400;
   font-size: sizes.$x16;
   color: colors.$kobo-gray-24;
+  border-bottom: sizes.$x1 solid colors.$kobo-gray-92;
 }
 
 td {
   padding: sizes.$x18 sizes.$x8;
 }
 
-td,
-th {
-  border-bottom: sizes.$x1 solid colors.$kobo-gray-92;
-}
 
 .link {
   color: colors.$kobo-dark-blue;
